stylize a little bit

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,3 +1,9 @@
+<h1>
+  Todos page
+</h1>
+
+<hr>
+
 <p>
-  todos works!
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer blandit lorem a fermentum dapibus. Cras vel dictum augue. Suspendisse non pulvinar orci. Donec in massa arcu. Donec massa eros, congue in tristique vel, sodales sit amet ex. Donec at justo massa. Mauris tortor nulla, elementum at arcu sit amet, volutpat posuere libero. Vivamus in metus eu turpis tempor interdum at vitae velit. Nulla malesuada consequat interdum. Etiam non tempor tellus, a ultricies velit. Nullam gravida diam vel quam rutrum, vitae facilisis nulla porttitor. Sed hendrerit interdum tempus. Vestibulum aliquet scelerisque mi, sit amet sollicitudin augue. Praesent lacus dui, aliquam non fermentum id, molestie id neque. Suspendisse ornare lectus volutpat sollicitudin tincidunt. Suspendisse hendrerit, leo in aliquet pretium, leo nunc feugiat lectus, at aliquet diam metus eget elit.
 </p>
