--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 
-<h1>
-  Hello, Angular !!!
-</h1>
-
-<router-outlet></router-outlet>
+<div class="main-area">
+    <router-outlet></router-outlet>
+</div>
