add list of todos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
+<div class="app">
 
-<div class="main-area">
-    <router-outlet></router-outlet>
+    <app-header></app-header>
+
+    <div class="main-area">
+        <router-outlet></router-outlet>
+    </div>
+
 </div>
