add item for list of todos and modify styles

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <span>TodoApp</span>
 </mat-toolbar>
 
-<mat-button-toggle-group>
+<mat-button-toggle-group class="toggle-group">
   <mat-button-toggle (click)="openHomePage()">
     <mat-icon>home</mat-icon>Home
   </mat-button-toggle>
