--- a/src/app/todos/todos-list/todos-list.component.html
+++ b/src/app/todos/todos-list/todos-list.component.html
@@ -1,20 +1,9 @@
 <div class="todos-list">
-  <mat-card class="todo-card" *ngFor="let todo of todos">
 
-    <mat-checkbox class="todo-checkbox"
-      color='primary' (click)="onToggle(todo)">
-    </mat-checkbox>
+  <app-todos-item *ngFor="let todo of todos"
+    [todoInfo]="todo"
+    (toggleEvent)="toggleTodo($event)"
+    (deleteEvent)="deleteTodo($event)">
+  </app-todos-item>
 
-    <mat-card-title class="todo-title"
-      [ngClass]="{'completed': todo.isCompleted}">
-        {{ todo.title }}
-    </mat-card-title>
-
-    <mat-card-actions class="todo-actions">
-      <button mat-icon-button (click)="onDelete(todo)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </mat-card-actions>
-
-  </mat-card>
 </div>
