create form for adding new todos

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,4 +4,8 @@
 
 <hr>
 
+<app-todos-form (addEvent)="addTodo($event)"></app-todos-form>
+
 <app-todos-list [todos]="todos"></app-todos-list>
+
+<hr>
