--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,8 +4,13 @@
 
 <hr>
 
-<app-todos-form (addEvent)="addTodo($event)"></app-todos-form>
+<app-todos-form
+  (addEvent)="addTodo($event)">
+</app-todos-form>
 
-<app-todos-list [todos]="todos"></app-todos-list>
+<app-todos-list [todos]="todos"
+  (toggleEvent)="toggleTodo($event)"
+  (deleteEvent)="deleteTodo($event)">
+</app-todos-list>
 
 <hr>
