--- a/src/app/todos/todos-list/todos-list.component.css
+++ b/src/app/todos/todos-list/todos-list.component.css
@@ -1,3 +1,8 @@
 .todos-list {
-    width: 30%;
+    height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
 }
