--- a/src/app/todos/todos-item/todos-item.component.css
+++ b/src/app/todos/todos-item/todos-item.component.css
@@ -1,9 +1,9 @@
 .todo-card {
     vertical-align: top;
-    width: 100%;
-    margin-bottom: 5px;
+    width: 290px;
+    margin: 5px;
 
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-between;
 }
@@ -11,6 +11,9 @@
 .todo-title {
     width: 80%;
     margin: 0;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: normal;
 }
 
 .todo-actions {
