--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,13 +4,17 @@
 
 <hr>
 
-<app-todos-form
-  (addEvent)="addTodo($event)">
-</app-todos-form>
+<div class="content-area">
 
-<app-todos-list [todos]="todos"
-  (toggleEvent)="toggleTodo($event)"
-  (deleteEvent)="deleteTodo($event)">
-</app-todos-list>
+  <app-todos-form
+    (addEvent)="addTodo($event)">
+  </app-todos-form>
+  
+  <app-todos-list [todos]="todos"
+    (toggleEvent)="toggleTodo($event)"
+    (deleteEvent)="deleteTodo($event)">
+  </app-todos-list>
+
+</div>
 
 <hr>
