add core module and update styles

--- a/src/app/todos/todos-form/todos-form.component.html
+++ b/src/app/todos/todos-form/todos-form.component.html
@@ -1,7 +1,7 @@
 <mat-card class="todos-form">
 
   <mat-form-field class="input-field">
-    <input matInput [(ngModel)]="newTodo"
+    <input matInput [(ngModel)]="newTodo" (keyup.enter)="onAdd()"
       placeholder="Enter your todo here">
   </mat-form-field>
 
