--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,3 +1,5 @@
-<mat-toolbar color="primary">
+я футер 
+
+<!-- <mat-toolbar color="primary">
   <span>Don't look at footer !</span>
-</mat-toolbar>
+</mat-toolbar> -->
