--- a/src/app/todos/todos-list/todos-list.component.css
+++ b/src/app/todos/todos-list/todos-list.component.css
@@ -1,4 +1,4 @@
-.todos-list-area {
+/* .todos-list-area {
     height: 300px;
 }
 
@@ -8,4 +8,4 @@
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
-}
+} */
