fix styles and add modal dialog

--- a/src/app/todos/todos-item/todos-item.component.html
+++ b/src/app/todos/todos-item/todos-item.component.html
@@ -17,7 +17,7 @@
   </mat-card-title>
   
   <mat-card-actions class="todo-actions">
-    <button mat-icon-button (click)="onDelete()">
+    <button mat-icon-button (click)="openDialogForDeleting()">
       <mat-icon>delete</mat-icon>
     </button>
   </mat-card-actions>
