--- a/src/app/todos/todos-list/todos-list.component.css
+++ b/src/app/todos/todos-list/todos-list.component.css
@@ -1,11 +1,11 @@
-/* .todos-list-area {
-    height: 300px;
+.todos-list-area {
+  text-align: center;
+  margin: 30px auto;
+  width: 90%;
 }
 
 .todos-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-} */
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
