--- a/src/app/todos/todos-form/todos-form.component.css
+++ b/src/app/todos/todos-form/todos-form.component.css
@@ -1,15 +1,15 @@
 .todos-form {
-    margin: 0 25% 15px;
-    padding: 10px 0 0;
-    width: 50%;
-    background-color: white;
-    text-align: center;
+  margin: 20px 25%;
+  padding: 10px 0 0;
+  width: 50%;
+  background-color: white;
+  text-align: center;
 }
 
 .input-field {
-    width: 80%;
+  width: 80%;
 }
 
 .submit-button {
-    background-color: blueviolet;
+  background-color: blueviolet;
 }
