--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -11,18 +11,33 @@
 .auth-title {
   margin: 0 auto !important;
   padding: 10px;
-  background-color: #04ff0042;
+  background-color: #FFA441;
 }
 
 .auth-form {
   margin: 30px 60px;
 }
 
+
+
+
+
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
 /****************************************/
 
 /* TODO: почему то material не сработал и пришлось переделывать*/
 
-input {
+/* input {
   display: block;
   margin: 30px auto;
   border-radius: 20px;
@@ -35,4 +50,7 @@ input {
 button {
   font-size: 20px;
   font-weight: bold;
-}
+} */
+
+
+
