--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -14,14 +14,20 @@
 
       <form [formGroup]="authForm" (ngSubmit)="submitForm()">
 
-        <input matInput type="text" *ngIf="authType == 'register'"
-          formControlName="username" placeholder="Username"/>
-        
-        <input matInput type="text"
-          formControlName="email" placeholder="Email"/>
+        <mat-form-field class="example-full-width" *ngIf="authType == 'register'">
+          <input matInput type="text" 
+            formControlName="username" placeholder="Username"/>
+        </mat-form-field>
 
-        <input matInput type="password"
-          formControlName="password" placeholder="Password"/>
+        <mat-form-field class="example-full-width">
+          <input matInput type="text"
+            formControlName="email" placeholder="Email"/>
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+          <input matInput type="password"
+            formControlName="password" placeholder="Password"/>
+        </mat-form-field>
 
         <button mat-button [disabled]="!authForm.valid" type="submit">
           {{ title }}
@@ -29,8 +35,8 @@
 
       </form>
 
-    </mat-card-content>
 
+    </mat-card-content>
     <mat-card-footer>
       <a [routerLink]="['/auth/login']" *ngIf="authType == 'register'">
         Have an account?
