--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -18,11 +18,6 @@
   margin: 30px 60px;
 }
 
-
-
-
-
-
 .example-form {
   min-width: 150px;
   max-width: 500px;
@@ -31,6 +26,12 @@
 
 .example-full-width {
   width: 100%;
+}
+
+.button-submit {
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #c0de46;
 }
 
 /****************************************/
@@ -51,6 +52,3 @@ button {
   font-size: 20px;
   font-weight: bold;
 } */
-
-
-
