some fix in styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-header></app-header>
+<div class="wrapper">
 
-<div class="main-area">
-  <router-outlet></router-outlet>
+  <app-header></app-header>
+
+  <div class="main-area">
+    <router-outlet></router-outlet>
+  </div>
+  
+  <app-footer></app-footer>
+
 </div>
-
-<app-footer></app-footer>
