--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary">
-  <span>Don't look at footer !</span>
+<mat-toolbar color="primary" class="toolbar-area">
+  <span>Copyright © 2018</span>
 </mat-toolbar>
