--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -8,9 +8,9 @@
 
     <div *ngIf="!authorized">
 
-      <nav mat-tab-nav-bar [color]="accent">
+      <nav mat-tab-nav-bar>
         <a mat-tab-link class="button-label"
-        *ngFor="let link of navLinks"
+        *ngFor="let link of notAuthLinks"
           [routerLink]="link.path"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}"
@@ -20,62 +20,54 @@
         </a>
       </nav>
 
-  
-      <!-- <ul>
-
-        <li
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/">
-            <button mat-button (click)="openHomePage()">
-              Home
-            </button>
-          </a>
-        </li>
-
-        <li
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/auth/login">
-            <button mat-button (click)="signIn()">
-              Sign In
-            </button>
-          </a>
-        </li>
-
-        <li
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/auth/register">
-            <button mat-button (click)="signUp()">
-              Sign Up
-            </button>
-          </a>
-        </li>
-
-      </ul> -->
-  
-
-
-      <!-- <button mat-button (click)="openHomePage()"
+<!-- 
+      <button mat-button (click)="openHomePage()"
         [ngClass]="{'active': pressed === 'Home'}">
           Home
-      </button> -->
+      </button>
 
-      <!-- <button mat-button (click)="signIn()"
+      <button mat-button (click)="signIn()"
         [ngClass]="{'active': pressed === 'Sign In'}">
           Sign In
-      </button> -->
+      </button>
 
-      <!-- <button mat-button (click)="signUp()"
+      <button mat-button (click)="signUp()"
         [ngClass]="{'active': pressed === 'Sign Up'}">
           Sign Up
-      </button> -->
-      
+      </button>
+-->
+
     </div>
 
     <div *ngIf="authorized">
 
+      <nav mat-tab-nav-bar>
+        <a mat-tab-link class="button-label"
+        *ngFor="let link of authLinks"
+          [routerLink]="link.path"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact: true}"
+          #rla="routerLinkActive"
+          [active]="rla.isActive">
+        {{link.label}}
+        </a>
+
+        <button mat-icon-button class="extraMenu"
+          [matMenuTriggerFor]="menu" (click)="userActions()">
+          <mat-icon>account_circle</mat-icon>
+        </button>
+      </nav>
+
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item class="extra" (click)="openProfilePage()">
+          Profile
+        </button>
+        <button mat-menu-item class="extra" (click)="signOut()">
+          Sign Out
+        </button>
+      </mat-menu>
+
+<!-- 
       <button mat-button (click)="openHomePage()"
         [ngClass]="{'active': pressed === 'Home'}">
           Home
@@ -90,18 +82,7 @@
         (click)="userActions()">
           <mat-icon>account_circle</mat-icon>
       </button>
-      
-      <mat-menu #menu="matMenu">
-        
-        <button mat-menu-item class="extra" (click)="openProfilePage()">
-          Profile
-        </button>
-        
-        <button mat-menu-item class="extra" (click)="signOut()">
-          Sign Out
-        </button>
-      
-      </mat-menu>
+-->
 
     </div>
 
