--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="wrapper">
 
-  <app-header></app-header>
+  <app-header
+    [authorized]="auth.authenticated$ | async">
+  </app-header>
 
   <div class="main-area">
     <router-outlet></router-outlet>
