fix menu and auth form

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,7 +7,7 @@
   <mat-card class="auth-card" *ngIf="authType !== undefined">
 
     <mat-card-title class="auth-title">
-      {{ authType | uppercase }}
+      {{ title | uppercase }}
     </mat-card-title>
 
     <mat-card-content class="auth-form">
