--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,12 @@ body {
   padding: 0;
   height: 100%;
 }
+
+.loading {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 100px;
+  transform: translate(-50%, -50%);
+}
