--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -19,8 +19,8 @@
           routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}"
           #rla="routerLinkActive"
-          [active]="rla.isActive">
-        {{link.label}}
+          [active]="link.isActive">
+            {{link.label}}
         </a>
       </nav>
 
@@ -36,12 +36,12 @@
           [routerLinkActiveOptions]="{exact: true}"
           #rla="routerLinkActive"
           [active]="rla.isActive">
-        {{link.label}}
+            {{link.label}}
         </a>
 
         <button mat-icon-button class="extraMenu"
           [matMenuTriggerFor]="menu">
-          <mat-icon>account_circle</mat-icon>
+          <mat-icon class="icon-size">account_circle</mat-icon>
         </button>
       </nav>
 
@@ -50,7 +50,7 @@
           Profile
         </button>
         <button mat-menu-item class="extra" (click)="signOut()">
-          Sign Out
+          Exit
         </button>
       </mat-menu>
 
