make home page prettier

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,33 @@
 <div class="home-content">
 
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-  </p>
+  <div class="home-image">
+    <img src="../../assets/images/justDoIt.jpg"
+      alt="Shia LaBeouf => Motivational Speech">
+  </div>
 
+  <div class="home-text">
+    <p>
+      Do it ! Just do it !
+    </p>
+    <p>
+      Don't let your dreams be dreams. Yesterday you said tomorrow.<br>
+      So just do it ! Make your dreams come true. Just do it !
+    </p>
+    <p>
+      Some people dream of success. While you're gonna<br>
+      wake up and work hard at it. Nothing is impossible !
+    </p>
+    <p>
+      You should get to the point. Where anyone else would quit.<br>
+      And you're not going to stop there. No, what are you waiting for ?
+    </p>
+    <p>
+      Do it ! Just do it ! Yes you can. Just do it !<br>
+      If you're tired of starting over. Stop giving up !
+    </p>
+  </div>
+
+<!-- 
   <button style="background-color: lightgreen"
     mat-button (click)="openNewPage('/auth/login')">
     Go to 'login'
@@ -13,5 +37,6 @@
     mat-button (click)="openNewPage('/todos')">
     Go to 'todos'
   </button>
-    
+-->
+
 </div>
