--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,19 @@
 .home-content {
-    font-size: 20px;
+    display: flex;
+    align-content: start;
+    justify-content: space-around;
+}
+
+/* .home-image, .home-text {
+    display: inline-block;
+} */
+
+.home-image img {
+    width: 400px;
+}
+
+.home-text {
+    font-size: 25px;
     font-style: italic;
     font-weight: normal;
 }
