--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -9,7 +9,7 @@
     <div *ngIf="authorized === null">
       Loading...
     </div>
-
+    
     <div *ngIf="authorized === false">
 
       <nav mat-tab-nav-bar>
@@ -19,8 +19,8 @@
           routerLinkActive="active"
           [routerLinkActiveOptions]="{exact: true}"
           #rla="routerLinkActive"
-          [active]="link.isActive">
-            {{link.label}}
+          [active]="rla.isActive">
+        {{link.label}}
         </a>
       </nav>
 
@@ -36,7 +36,7 @@
           [routerLinkActiveOptions]="{exact: true}"
           #rla="routerLinkActive"
           [active]="rla.isActive">
-            {{link.label}}
+        {{link.label}}
         </a>
 
         <button mat-icon-button class="extraMenu"
@@ -50,7 +50,7 @@
           Profile
         </button>
         <button mat-menu-item class="extra" (click)="signOut()">
-          Exit
+          Sign Out
         </button>
       </mat-menu>
 
