--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary" class="toolbar-area">
 
   <div class="project-name">
-    Welcome in Todo App !!!
+    <!-- Welcome in Todo App !!! -->
+    Hello, {{ user.email }} !!!
   </div>
 
   <div class="toolbar-buttons">
