--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="wrapper">
 
-  <app-header
+  <!-- <app-header
     [authorized]="auth.authenticated$ | async">
-  </app-header>
+  </app-header> -->
+
+  <app-header></app-header>
 
   <div class="main-area">
     <router-outlet></router-outlet>
