--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -2,7 +2,10 @@
 
   <div class="project-name">
     <!-- Welcome in Todo App !!! -->
-    Hello, {{ user.email }} !!!
+    Hello,
+      <span *ngIf="user">{{ user.email }}</span>
+      <span *ngIf="!user">anonimus</span>
+    !!!
   </div>
 
   <div class="toolbar-buttons">
