fix adding button in todo-form

--- a/src/app/todos/todos-form/todos-form.component.css
+++ b/src/app/todos/todos-form/todos-form.component.css
@@ -11,5 +11,13 @@
 }
 
 .submit-button {
-  background-color: blueviolet;
+  background-color: #8080804d;
+}
+
+.icon-add {
+  font-weight: bold;
+}
+
+.icon-add:hover {
+  color: yellow;
 }
