use directive appHover in todo-item

--- a/src/app/todos/todos-item/todos-item.component.html
+++ b/src/app/todos/todos-item/todos-item.component.html
@@ -1,4 +1,4 @@
-<mat-card class="todo-card"
+<mat-card appHover class="todo-card"
   [ngClass]="{'completed': todoInfo.isCompleted}">
 
   <mat-card-actions class="todo-actions">
