--- a/src/app/todos/todos-item/todos-item.component.css
+++ b/src/app/todos/todos-item/todos-item.component.css
@@ -27,3 +27,11 @@
   color: grey;
   text-decoration: line-through;
 }
+
+.hovered {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  transition: .5s all;
+  z-index: 10;
+}
+
