--- a/src/app/todos/todos-item/todos-item.component.html
+++ b/src/app/todos/todos-item/todos-item.component.html
@@ -2,7 +2,7 @@
   [ngClass]="{'completed': todoInfo.isCompleted}">
 
   <mat-card-actions class="todo-actions">
-    <button mat-icon-button (click)="onToggle()">
+    <button appHover mat-icon-button (click)="onToggle()">
       <mat-icon *ngIf="!todoInfo.isCompleted">
         check_box_outline_blank
       </mat-icon>
@@ -17,7 +17,7 @@
   </mat-card-title>
   
   <mat-card-actions class="todo-actions">
-    <button mat-icon-button (click)="openDialogForDeleting()">
+    <button appHover mat-icon-button (click)="openDialogForDeleting()">
       <mat-icon>delete</mat-icon>
     </button>
   </mat-card-actions>
