--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,5 +4,6 @@
 
 <app-todos-list [todos]="todos"
   (toggleEvent)="toggleTodo($event)"
+  (updateEvent)="updateTodo($event)"
   (deleteEvent)="deleteTodo($event)">
 </app-todos-list>
