--- a/src/app/todos/todos-item/todos-item.component.html
+++ b/src/app/todos/todos-item/todos-item.component.html
@@ -16,7 +16,7 @@
     <mat-card-footer class="todo-card__footer">
 
       <mat-card-subtitle class="footer__card-subtitle">
-        {{ todoInfo.createdAt | date: 'short' }}
+        {{ todoInfo.createdAt | date: 'dd.MM.yy' }}
       </mat-card-subtitle>
 
       <mat-card-actions class="footer__card-actions">
