--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,20 +1,11 @@
 <mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Vova</mat-card-title> <!-- Имя -->
-    <mat-card-subtitle>admin@admin.com</mat-card-subtitle> <!-- Почта -->
+    <mat-card-title>name: {{name}}</mat-card-title> <!-- Имя -->
+    <mat-card-subtitle>e-mail: {{email}}</mat-card-subtitle> <!-- Почта -->
   </mat-card-header>
   <img mat-card-image src="../../assets/images/Vova.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      Web-разработкой (особенно front-end) я занимаюсь с начала 2018 года.
-      До этого я занимался разработкой на Python ( в основном парсеры ).
-      В свободное время занимаюсь изучением английского языка ( уровень: Pre-Intemediate ).
-      Иногда я пишу стихи -> группа_в_ВК (+1 в карму за репост).
-    </p>
-  </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <!--user about info-->
   </mat-card-actions>
 </mat-card>
